--- a/config/locales/clearance.en.yml
+++ b/config/locales/clearance.en.yml
@@ -52,11 +52,11 @@ en:
         your email address.
       title: Reset your password
   sessions:
-    form:
-      forgot_password: Forgot password?
-      sign_up: Sign up
     new:
       title: Sign in
+      forgot_password: Forgot password?
+      sign_up: Sign up
+      home: Home
   users:
     new:
       sign_in: Sign in
